# script

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  test_LookupTableV2Grad.cu  test_atomic.cu
paddle_script/: start_bert.sh  test_op.sh
paddle_script/Paddle/: make_cinn.sh  make_install.sh  test_op.sh
paddle_script/PaddleDetection/: start_maskrcnn.sh
paddle_script/ernie_doc/: debug.sh  train_local.sh
paddle_script/models/PaddleNLP/benchmark/bert/: start_bert_profile.sh
single_test/: CMakeLists.txt  alloc_helper.h  check_LookupTableV2Grad.cu  common.h  common_func.h  common_math.h  cuda_helper.h  cudnn_helper.h  curand_helper.h  test_LookupTableV2Grad.cu
single_test/CINN/: resnet50_profile1201_origin.sh  run_py.sh  run_resnet50_with_cinn.sh  test_add_relu.py  test_batch_norm_nn.py  test_batch_norm_static.py  test_batchnorm_conv2d.py  test_cinn_reshape.py  test_cinn_transpose.py  test_conv2d.py  test_elem_reduce.py  test_elementwise_add.py  test_fc.py  test_fuse_add.py  test_mul.py  test_mul_add.py  test_reshape.py  test_resnet50.py  test_resnet50_forward.py  test_resnet50_with_cinn.py  test_sum.py  test_transpose.py
single_test/CUDA/: CMakeLists.txt  matrix_multiply.cu  matrix_transpose.cu  prefix_sum.cu  reduce.cu  shared_memory_cost.cu  test_atomic.cu
single_test/KeMatrixTopK/: start_py.sh  test_KeMatrixTopK.cu
single_test/LookupTableV2Grad/: check_LookupTableV2Grad.cu  test_LookupTableV2Grad.cu
single_test/cmake/: CMakeLists.txt  check.cmake  common.cmake  cuda.cmake  main.cmake
single_test/cmake/cuda/: CMakeLists.txt
single_test/det/: client.c  globalapi.h  test_det.py  test_sdet.py  test_template.cc
single_test/erniedoc/: elementwise_op_function-bak1.h  elementwise_op_function-bak3.h  elementwise_op_function-bak4.h  elementwise_op_function-bak7.h  elementwise_op_function-bak8.h  elementwise_op_function-bak9.h  elemwise_grad_broadcast2.cu  elemwise_grad_broadcast2.h  run_test.sh  slice_grad.cu  softmax_backward.cu  softmax_backward_D1.h  softmax_cudnn_op-bak1.cu  softmax_cudnn_op-bak2.cu  softmax_cudnn_op-bak3.cu  softmax_cudnn_op-bak4.cu  softmax_cudnn_op-bak5.cu  softmax_cudnn_op-bak6.cu  softmax_forward.cu  softmax_forward_D1.h  start_py.sh  test_elemwise_add_grad.py  test_elemwise_grad.py  test_matmul_dygraph.py  test_matmul_static.py  test_slice.py  test_slice_grad.py  test_softmax_backward.py  test_softmax_forward.py  test_transpose.py  transpose-bak1.cu  transpose-bak2.cu  transpose.cu  transpose_half.cu
single_test/erniedoc_fleet/: adam.cu  adam.h  check_finite_and_unscale.cu  check_finite_and_unscale.h  check_finite_and_unscale_op-bak1.cu  cub_reduce-bak1.h  cub_reduce-bak2.h  elementwise_add.cu  elementwise_add.h  reduce_sum_fp16.cu  reduce_sum_fp16.h  reduce_sum_op-bak1.cu  run_test.sh  slice.cu  slice.h  slice_grad_op-bak1.cu  slice_grad_op-bak1.h  slice_grad_op-bak2.cu  slice_grad_op-bak3.cu  slice_grad_op-bak3.h  slice_op-bak1.h  slice_op-bak2.h  slice_op-bak3.h  slice_pad.cu  slice_pad.h  test  test_log_softmax.py  test_pad.py  test_reduce_sum.py  test_slice.py  test_slice_grad.py  test_tf_slice_grad.py  update_loss_scaling.cu  update_loss_scaling.h  update_loss_scaling_op-bak1.cu
single_test/graph_to_program/: boost_any_test.cc  common.py  test_bert_to_program.py  test_program_add.py  test_residual_block_toprogram.py  test_resnet50_to_program.py
single_test/maskrcnn/: elemwise_grad_broadcast2.cu  randperm.cu  range-bak1.cu  range-bak2.cu  start_py.sh  test_range.py  test_topk.py  test_where_index.py  where_index-bak2.cu  where_index-bak3.cu  where_index-bak4.cu  where_index-bak5.cu  where_index.cu
single_test/nsight/: matrix_transpose.cu  matrix_transpose_shared.cu
tools/test_cmake/: .clang-format  .gitignore  CMakeLists.txt  build.sh
tools/test_cmake/cmake/: config.cmake  cuda.cmake  gflags.cmake  glog.cmake  gtest.cmake  nvtx.cmake  utils.cmake
tools/test_cmake/src/: CMakeLists.txt
tools/test_cmake/tests/: CMakeLists.txt  do_gtest.cpp  do_nvtest.cu  do_test.cpp  test_template.cpp  test_template.h
tools/test_cmake/tools/codestyle/: cpplint_pre_commit.hook
tools/test_xmake/: .clang-format  .gitignore  xmake.lua
tools/test_xmake/src/: hello.cc  hello.h  xmake.lua
tools/test_xmake/test/: test_cpp17.cc  test_hello.cc  xmake.lua
tools/test_xmake/third/: xmake.lua
tools/test_xmake/tools/codestyle/: clang_format.hook
